pochi major changes

--- a/fimco/fimcosite/templates/base.html
+++ b/fimco/fimcosite/templates/base.html
@@ -97,7 +97,7 @@
                                     </li>
                                     <li class="dropdown">
                                         <a class="dropdown-toggle">
-                                            News & Insights
+                                            NEWS & INSIGHTS
                                         </a>
                                         <ul class="dropdown-menu">
                                             <li><a href="{% url 'blog' %}">BLOG</a></li>
