--- a/fimco/pochi/templates/pochi/group.html
+++ b/fimco/pochi/templates/pochi/group.html
@@ -61,23 +61,16 @@
                                             <div class="row">
                                                 <div class="col-xs-4 mid-align">
                                                     <button type="button" id="done" class="btn btn-primary">
-                                                        <i class="fa fa-check"></i>Choose an admin
+                                                        <i class="fa fa-check"></i>Choose a second admin
+                                                        <small>(optional)</small>
                                                     </button>
                                                 </div>
                                             </div>
 
                                             <div class="row">
                                                 <div class="col-md-6">
-                                                    <div id="first-admin" class="fancy-form fancy-form-select" style="display: none">
-                                                        <select class="form-control" id="first" name="first" title="admin">
-                                                            <option value="">Select first admin</option>
-                                                        </select>
-                                                        <i class="fancy-arrow"></i>
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-6">
                                                     <div id="second-admin" class="fancy-form fancy-form-select" style="display: none">
-                                                        <select class="form-control" id="second" name="second" title="admin">
+                                                        <select class="form-control" id="admin" name="admin" title="admin">
                                                             <option value="">Select second admin</option>
                                                         </select>
                                                         <i class="fancy-arrow"></i>
