--- a/fimco/pochi/templates/pochi/deposit.html
+++ b/fimco/pochi/templates/pochi/deposit.html
@@ -20,15 +20,6 @@
         .process-wizard > .process-wizard-step:last-child  > .progress {width: 50%; height: 8px;}
         .process-wizard > .process-wizard-step.disabled a.process-wizard-dot{ pointer-events: none; }
 
-        /* default */
-{#        .process-wizard-default > .process-wizard-step > .process-wizard-dot,#}
-{#        .process-wizard-default > .process-wizard-step > .progress > .progress-bar {#}
-{#            background:#ccc;#}
-{#        }#}
-{#        .process-wizard-default > .process-wizard-step > .process-wizard-dot:after {#}
-{#            background-color:#666;#}
-{#        }#}
-
         /* info */
         .process-wizard-info > .process-wizard-step > .process-wizard-dot,
         .process-wizard-info > .process-wizard-step > .progress > .progress-bar {
@@ -37,34 +28,6 @@
         .process-wizard-info > .process-wizard-step > .process-wizard-dot:after {
             background-color:#31708f;
         }
-
-        /* warning */
-{#        .process-wizard-warning > .process-wizard-step > .process-wizard-dot,#}
-{#        .process-wizard-warning > .process-wizard-step > .progress > .progress-bar {#}
-{#            background:#fbe8aa;#}
-{#        }#}
-{#        .process-wizard-warning > .process-wizard-step > .process-wizard-dot:after {#}
-{#            background-color:#fbbd19;#}
-{#        }#}
-
-        /* success */
-{#        .process-wizard-success > .process-wizard-step > .process-wizard-dot,#}
-{#        .process-wizard-success > .process-wizard-step > .progress > .progress-bar {#}
-{#            background:#d6e9c6;#}
-{#        }#}
-{#        .process-wizard-success > .process-wizard-step > .process-wizard-dot:after {#}
-{#            background-color:#3c763d;#}
-{#        }#}
-
-        /* success */
-{#        .process-wizard-danger > .process-wizard-step > .process-wizard-dot,#}
-{#        .process-wizard-danger > .process-wizard-step > .progress > .progress-bar {#}
-{#            background:#ebccd1;#}
-{#        }#}
-{#        .process-wizard-danger > .process-wizard-step > .process-wizard-dot:after {#}
-{#            background-color:#a94442;#}
-{#        }#}
-
 
         /* Tab Process Steps */
         ul.process-steps,
@@ -124,7 +87,6 @@
         ul.process-steps li h6 {
             margin:20px 0 0 0;
         }
-
 
         ul.process-steps li>a>i {
             padding:0;
@@ -223,6 +185,43 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <form class="payment" method="post" action="{% url 'deposit' %}">
+                        {% csrf_token %}
+                        <div class="panel panel-default">
+                            <div class="panel-heading panel-heading-transparent">
+                                <strong>Deposit Funds</strong>
+                            </div>
+                            <div class="panel-body">
+                                <label>Enter Amount</label>
+                                <input type="number" class="form-control" name="amount" placeholder="TZS" required>
+                                <br />
+                            </div>
+                            <div class="panel-footer transfer">
+                                <button class="btn btn-primary" type="submit">
+                                    <i class="fa fa-check"></i> CONFIRM MONEY TRANSFER
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="row">
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="col-xs-12">
+                        <div class="alert alert-danger margin-bottom-30">
+                            <button type="button" class="close" data-dismiss="alert">
+                                <span aria-hidden="true">×</span>
+                                <span class="sr-only">Close</span>
+                            </button>
+                            <strong>{{ message }}</strong>
+                        </div>
+                    </div>
+                {% endfor %}
+            {% endif %}
             </div>
         </div>
     </section>
