--- a/fimco/pochi/templates/pochi/group_profile.html
+++ b/fimco/pochi/templates/pochi/group_profile.html
@@ -31,21 +31,27 @@
                                     <i class="et-wallet"></i>
                                 </div>
                                 <div class="col-xs-6">
-                                    <div class="row">{{ statement.type }}</div>
                                     <div class="row">{{ statement.service }}</div>
+                                    <div class="row">{{ statement.channel }}</div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-3 col-xs-offset-6">
-                            <div class="row">{{ statement.amount }}</div>
-                            <div class="row">{{ statement.charges }}</div>
+                        <div class="col-xs-3">
+                            <div class="row">{{ statement.currency }} {{ statement.amount }}</div>
+                            <div class="row">{{ statement.currency }} {{ statement.charges }}</div>
+                        </div>
+                        <div class="col-xs-3">
+                            {{ statement.dest_account }}
+                        </div>
+                        <div class="col-xs-3">
+                            {{ statement.status }}
                         </div>
                     </div>
                 {% endfor %}
             </div>
             <div class="row margin-top-20 mid-align">
                 <div class="col-xs-12 col-md-4 col-lg-3 col-lg-offset-4">
-                    <a href="#" class="btn btn-featured btn-primary">
+                    <a href="{% url 'group_statement' group %}" class="btn btn-featured btn-primary">
                         <span>View full statement</span>
                         <i class="et-document"></i>
                     </a>
